--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ defusedxml==0.6.0
 Django==3.0.1
 entrypoints==0.3
 future==0.18.2
+gunicorn==20.0.4
 gast==0.2.2
 google-auth==1.7.0
 google-auth-oauthlib==0.4.1
@@ -38,6 +39,7 @@ Jinja2==2.10.3
 joblib==0.16.0
 jsonschema==3.2.0
 jupyter==1.0.0
+whitenoise==5.0.1
 jupyter-client==5.3.3
 jupyter-console==6.0.0
 jupyter-core==4.6.1
