--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ cloudpickle==1.2.2
 colorama==0.4.3
 cycler==0.10.0
 cytoolz==0.10.1
+Cython==0.29.14
 dask==2.9.0
 decorator==4.4.1
 defusedxml==0.6.0
